bringing project back to life

--- a/XClip.Web/cutInfo.html
+++ b/XClip.Web/cutInfo.html
@@ -113,11 +113,12 @@
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/utilityFunctions.js"></script>
 	<script type="text/javascript" src="js/select2.min.js"></script>
-    <script type="text/javascript" src="js/apiWrapper.js"></script>
+    <script type="text/javascript" src="js/shared/apiWrapper.js"></script>
     <script type="text/javascript" src="js/models/mediaSource.js"></script>
 	<script type="text/javascript" src="js/models/batch.js"></script>
 	<script type="text/javascript" src="js/models/batchItem.js"></script>
 	<script type="text/javascript" src="js/cutInfo.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
     <script type="text/javascript" defer="defer">$(document).ready(function () { initHtml(); });</script>	
   </body>
 </html>
