work on tagController

--- a/XClip.Web/cutInfo.html
+++ b/XClip.Web/cutInfo.html
@@ -117,6 +117,7 @@
     <script type="text/javascript" src="js/models/mediaSource.js"></script>
 	<script type="text/javascript" src="js/models/batch.js"></script>
 	<script type="text/javascript" src="js/models/batchItem.js"></script>
+	<script type="text/javascript" src="js/models/tagCreationModel.js"></script>
 	<script type="text/javascript" src="js/cutInfo.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
     <script type="text/javascript" defer="defer">$(document).ready(function () { initHtml(); });</script>	
